// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest @click and @selected listener events works as expected 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="clifford brown"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can click outside document to trigger close 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can customize css prefix 1`] = `
<div id="the-whole-thing" class="containerz">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="the-whole-thing-v-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="the-whole-thing-v-results" id="the-input-thing" placeholder="Type 'G'" value="G" class="v-input-open"></div>
  <div id="the-whole-thing-v-results" class="the-results-container">
    <div aria-labelledby="the-whole-thing" class="the-results">
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="v-results-item-0" class="v-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="v-results-item-1" class="v-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="v-results-item-2" class="v-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="v-results-item-3" class="v-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="v-results-item-4" class="v-results-item">
          life of lamont math
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="5" data-section-name="dogs" id="v-results-item-5" class="v-results-item">
          willow
        </div>
        <div role="option" data-suggestion-index="6" data-section-name="dogs" id="v-results-item-6" class="v-results-item">
          star
        </div>
        <div role="option" data-suggestion-index="7" data-section-name="dogs" id="v-results-item-7" class="v-results-item">
          gromit
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="8" data-section-name="cats" id="v-results-item-8" class="v-results-item">
          rasputin
        </div>
        <div role="option" data-suggestion-index="9" data-section-name="cats" id="v-results-item-9" class="v-results-item">
          proton
        </div>
        <div role="option" data-suggestion-index="10" data-section-name="cats" id="v-results-item-10" class="v-results-item">
          myshka
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="11" data-section-name="zeu" id="v-results-item-11" class="v-results-item">
          platypus
        </div>
        <div role="option" data-suggestion-index="12" data-section-name="zeu" id="v-results-item-12" class="v-results-item">
          hedgehog
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="13" data-section-name="uhh" id="v-results-item-13" class="v-results-item">
          something
        </div>
        <div role="option" data-suggestion-index="14" data-section-name="uhh" id="v-results-item-14" class="v-results-item">
          otherthing
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can customize ids and classes for container divs 1`] = `
<div id="automatischsuchen" class="containerz">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="automatischsuchen-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="automatischsuchen-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G" class="autosuggest-input-open"></div>
  <div id="automatischsuchen-autosuggest-results" class="resultz-containerz">
    <div aria-labelledby="automatischsuchen" class="resultz">
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="5" data-section-name="dogs" id="autosuggest-results-item-5" class="autosuggest-results-item">
          willow
        </div>
        <div role="option" data-suggestion-index="6" data-section-name="dogs" id="autosuggest-results-item-6" class="autosuggest-results-item">
          star
        </div>
        <div role="option" data-suggestion-index="7" data-section-name="dogs" id="autosuggest-results-item-7" class="autosuggest-results-item">
          gromit
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="8" data-section-name="cats" id="autosuggest-results-item-8" class="autosuggest-results-item">
          rasputin
        </div>
        <div role="option" data-suggestion-index="9" data-section-name="cats" id="autosuggest-results-item-9" class="autosuggest-results-item">
          proton
        </div>
        <div role="option" data-suggestion-index="10" data-section-name="cats" id="autosuggest-results-item-10" class="autosuggest-results-item">
          myshka
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="11" data-section-name="zeu" id="autosuggest-results-item-11" class="autosuggest-results-item">
          platypus
        </div>
        <div role="option" data-suggestion-index="12" data-section-name="zeu" id="autosuggest-results-item-12" class="autosuggest-results-item">
          hedgehog
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="13" data-section-name="uhh" id="autosuggest-results-item-13" class="autosuggest-results-item">
          something
        </div>
        <div role="option" data-suggestion-index="14" data-section-name="uhh" id="autosuggest-results-item-14" class="autosuggest-results-item">
          otherthing
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can display section and item classNames 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" class="autosuggest-section hello-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item hello-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item hello-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item hello-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item hello-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item hello-item">
          life of lamont math
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="5" data-section-name="dogs" id="autosuggest-results-item-5" class="autosuggest-results-item">
          willow
        </div>
        <div role="option" data-suggestion-index="6" data-section-name="dogs" id="autosuggest-results-item-6" class="autosuggest-results-item">
          star
        </div>
        <div role="option" data-suggestion-index="7" data-section-name="dogs" id="autosuggest-results-item-7" class="autosuggest-results-item">
          gromit
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="8" data-section-name="cats" id="autosuggest-results-item-8" class="autosuggest-results-item">
          rasputin
        </div>
        <div role="option" data-suggestion-index="9" data-section-name="cats" id="autosuggest-results-item-9" class="autosuggest-results-item">
          proton
        </div>
        <div role="option" data-suggestion-index="10" data-section-name="cats" id="autosuggest-results-item-10" class="autosuggest-results-item">
          myshka
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="11" data-section-name="zeu" id="autosuggest-results-item-11" class="autosuggest-results-item">
          platypus
        </div>
        <div role="option" data-suggestion-index="12" data-section-name="zeu" id="autosuggest-results-item-12" class="autosuggest-results-item">
          hedgehog
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="13" data-section-name="uhh" id="autosuggest-results-item-13" class="autosuggest-results-item">
          something
        </div>
        <div role="option" data-suggestion-index="14" data-section-name="uhh" id="autosuggest-results-item-14" class="autosuggest-results-item">
          otherthing
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can display section header 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" aria-labelledby="autosuggest-Suggestions" class="autosuggest-section">
        <div id="autosuggest-Suggestions" class="autosuggest-results-before autosuggest-results-before-default">Suggestions</div>
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can handle null data 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can modify input type attribute 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="search" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can mount 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="q"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can render default suggestion value by property name 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="Frodo" class="cool-class"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can render section slots 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" aria-labelledby="autosuggest-Suggestions" class="autosuggest-section">
        <div id="autosuggest-Suggestions" class="autosuggest-results-before autosuggest-results-before-default">Suggestions</div>
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div class="autosuggest-results-before autosuggest-results-before-dogs">The Dogs</div>
        <div role="option" data-suggestion-index="5" data-section-name="dogs" id="autosuggest-results-item-5" class="autosuggest-results-item">
          willow
        </div>
        <div role="option" data-suggestion-index="6" data-section-name="dogs" id="autosuggest-results-item-6" class="autosuggest-results-item">
          star
        </div>
        <div role="option" data-suggestion-index="7" data-section-name="dogs" id="autosuggest-results-item-7" class="autosuggest-results-item">
          gromit
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div>Moar Cats is good</div>
        <div role="option" data-suggestion-index="8" data-section-name="cats" id="autosuggest-results-item-8" class="autosuggest-results-item">
          rasputin
        </div>
        <div role="option" data-suggestion-index="9" data-section-name="cats" id="autosuggest-results-item-9" class="autosuggest-results-item">
          proton
        </div>
        <div role="option" data-suggestion-index="10" data-section-name="cats" id="autosuggest-results-item-10" class="autosuggest-results-item">
          myshka
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div>zoo animals?</div>
        <div role="option" data-suggestion-index="11" data-section-name="zeu" id="autosuggest-results-item-11" class="autosuggest-results-item">
          platypus
        </div>
        <div role="option" data-suggestion-index="12" data-section-name="zeu" id="autosuggest-results-item-12" class="autosuggest-results-item">
          hedgehog
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="13" data-section-name="uhh" id="autosuggest-results-item-13" class="autosuggest-results-item">
          something
        </div>
        <div role="option" data-suggestion-index="14" data-section-name="uhh" id="autosuggest-results-item-14" class="autosuggest-results-item">
          otherthing
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render simplest component with single onSelected 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="razzmatazz" class="autosuggest-input-open cool-class"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
        <div role="option" data-suggestion-index="5" data-section-name="default" id="autosuggest-results-item-5" class="autosuggest-results-item">
          pearly-dewdrops’ drops
        </div>
        <div role="option" data-suggestion-index="6" data-section-name="default" id="autosuggest-results-item-6" class="autosuggest-results-item">
          math mammoth light blue
        </div>
        <div role="option" data-suggestion-index="7" data-section-name="default" id="autosuggest-results-item-7" class="autosuggest-results-item">
          fluffy tufts
        </div>
        <div role="option" data-suggestion-index="8" data-section-name="default" id="autosuggest-results-item-8" class="autosuggest-results-item">
          math
        </div>
        <div role="option" data-suggestion-index="9" data-section-name="default" id="autosuggest-results-item-9" class="autosuggest-results-item">
          rococo
        </div>
        <div role="option" data-suggestion-index="10" data-section-name="default" id="autosuggest-results-item-10" class="autosuggest-results-item">
          necessitatibus
        </div>
        <div role="option" data-suggestion-index="11" data-section-name="default" id="autosuggest-results-item-11" class="autosuggest-results-item">
          modi voluptatem est
        </div>
        <div role="option" data-suggestion-index="12" data-section-name="default" id="autosuggest-results-item-12" class="autosuggest-results-item">
          snap crackle pop
        </div>
        <div role="option" data-suggestion-index="13" data-section-name="default" id="autosuggest-results-item-13" class="autosuggest-results-item">
          bath toys
        </div>
        <div role="option" data-suggestion-index="14" data-section-name="default" id="autosuggest-results-item-14" class="autosuggest-results-item">
          omnis voluptas ut
        </div>
        <div role="option" data-suggestion-index="15" data-section-name="default" id="autosuggest-results-item-15" class="autosuggest-results-item">
          lamont
        </div>
        <div role="option" data-suggestion-index="16" data-section-name="default" id="autosuggest-results-item-16" class="autosuggest-results-item">
          lorelei
        </div>
        <div role="option" data-suggestion-index="17" data-section-name="default" id="autosuggest-results-item-17" class="autosuggest-results-item">
          multiplication
        </div>
        <div role="option" data-suggestion-index="18" data-section-name="default" id="autosuggest-results-item-18" class="autosuggest-results-item">
          thinking tree
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render slots 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div class="header-dude"></div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item">
          <h1>clifford brown</h1>
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          <h1>max roach</h1>
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          <h1>razzmatazz</h1>
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          <h1>life of lamont</h1>
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          <h1>life of lamont math</h1>
        </div>
      </div>
      <div id="footer-dude"><span>1</span><span>2</span></div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render suggestions 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="autosuggest-results-item-0" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="clifford brown" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item-highlighted autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can select from suggestions using keystroke 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can use escape key to exit 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="G"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest highlights first option on keydown when previously closed 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="autosuggest-results-item-0" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="clifford brown" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item-highlighted autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="5" data-section-name="dogs" id="autosuggest-results-item-5" class="autosuggest-results-item">
          willow
        </div>
        <div role="option" data-suggestion-index="6" data-section-name="dogs" id="autosuggest-results-item-6" class="autosuggest-results-item">
          star
        </div>
        <div role="option" data-suggestion-index="7" data-section-name="dogs" id="autosuggest-results-item-7" class="autosuggest-results-item">
          gromit
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="8" data-section-name="cats" id="autosuggest-results-item-8" class="autosuggest-results-item">
          rasputin
        </div>
        <div role="option" data-suggestion-index="9" data-section-name="cats" id="autosuggest-results-item-9" class="autosuggest-results-item">
          proton
        </div>
        <div role="option" data-suggestion-index="10" data-section-name="cats" id="autosuggest-results-item-10" class="autosuggest-results-item">
          myshka
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="11" data-section-name="zeu" id="autosuggest-results-item-11" class="autosuggest-results-item">
          platypus
        </div>
        <div role="option" data-suggestion-index="12" data-section-name="zeu" id="autosuggest-results-item-12" class="autosuggest-results-item">
          hedgehog
        </div>
      </div>
      <div role="listbox" class="autosuggest-section">
        <div role="option" data-suggestion-index="13" data-section-name="uhh" id="autosuggest-results-item-13" class="autosuggest-results-item">
          something
        </div>
        <div role="option" data-suggestion-index="14" data-section-name="uhh" id="autosuggest-results-item-14" class="autosuggest-results-item">
          otherthing
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest is aria complete 1`] = `
<div id="autosuggest">
  <div role="combobox" aria-expanded="true" aria-haspopup="listbox" aria-owns="autosuggest-autosuggest-results"><input type="text" autocomplete="off" aria-autocomplete="list" aria-activedescendant="autosuggest-results-item-2" aria-controls="autosuggest-autosuggest-results" id="autosuggest-input" placeholder="Type 'G'" value="razzmatazz" class="autosuggest-input-open"></div>
  <div id="autosuggest-autosuggest-results" class="autosuggest-results-container">
    <div aria-labelledby="autosuggest" class="autosuggest-results">
      <div role="listbox" aria-labelledby="autosuggest-Suggestions" class="autosuggest-section">
        <div id="autosuggest-Suggestions" class="autosuggest-results-before autosuggest-results-before-default">Suggestions</div>
        <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest-results-item-0" class="autosuggest-results-item">
          clifford brown
        </div>
        <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest-results-item-1" class="autosuggest-results-item">
          max roach
        </div>
        <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest-results-item-2" class="autosuggest-results-item-highlighted autosuggest-results-item">
          razzmatazz
        </div>
        <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest-results-item-3" class="autosuggest-results-item">
          life of lamont
        </div>
        <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest-results-item-4" class="autosuggest-results-item">
          life of lamont math
        </div>
      </div>
    </div>
  </div>
</div>
`;
